# AlphaGEX

./: .coveragerc  .env.development  .env.template  .gitattributes  .gitignore  .mcp.json  AI_COPILOT_IMPROVEMENTS.md  AI_INTELLIGENCE_TEST_REPORT.md  ALPHAGEX_COMPREHENSIVE_ANALYSIS.md  ALPHA_VANTAGE_SETUP.md  ALTERNATIVE_DATA_SOURCES.md  ANNOUNCEMENT.md  API_PRIORITY_FIX.md  API_RATE_LIMIT_PROTECTION_SYSTEM.md  API_TESTING_GUIDE.md  API_TEST_PAGE.html  API_USAGE_AUDIT.md  API_USAGE_AUDIT_REPORT.md  API_VERIFICATION_REPORT.md  API_VERIFICATION_RESULTS.md  ARCHITECTURE_ANALYSIS.md  AUTONOMOUS_TRADER_ACTION_PLAN.md  AUTONOMOUS_TRADER_COMPLETE.md  AUTONOMOUS_TRADER_FIXES.md  AUTONOMOUS_TRADER_ISSUES_FIXED.md  AUTONOMOUS_TRADER_QUICKSTART.md  AUTONOMOUS_TRADER_REQUIREMENTS.md  BACKEND_403_FIX.md  BACKEND_STARTUP_ISSUE.md  BACKFILL_GUIDE.md  BACKTEST_INTEGRATION_TEST_RESULTS.md  BOT_AUDIT_FINDINGS.md  BOT_LOGIC_VERIFICATION_REPORT.md  BUG_FIXES_NAVIGATION_OPTIMIZER.md  CHART_FIX_COMPLETE.md  CLAUDE.md  CLAUDE_AI_ENHANCEMENTS.md  CODEBASE_EXPLORATION_SUMMARY.md  CODEBASE_QUICK_REFERENCE.md  COMPREHENSIVE_CODEBASE_EXPLORATION.md  (+241 more)
.githooks/: post-merge
.streamlit/: config.toml
ai/: __init__.py  ai_strategy_optimizer.py  ai_trade_advisor.py  ai_trade_recommendations.py  gexis_cache.py  (+27 more)
gmail-organizer/: .gitignore  README.md  pyproject.toml
gmail-organizer/config/: rules.example.yaml
gmail-organizer/src/gmail_organizer/: __init__.py  auth.py  cli.py  models.py  organizer.py  rules_loader.py
gmail-organizer/tests/: test_models.py  test_organizer.py  test_rules_loader.py
(+3008 files in other folders)
